fix overflow and height of main element

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import './scss/_variables';
 
-html,
-body {
+html {
     overflow: hidden;
 }
 
@@ -18,7 +17,6 @@ body {
 
     main {
         height: 88vh;
-        min-height: fit-content;
         width: 100%;
     }
 }
